--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html ng-app="ShoppingCart">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shopping Cart</title>
 
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
+    <div ng-controller="MainCtrl">
+
+
+    <!-- <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -19,14 +24,93 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header> -->
 
+  <div class="container-fluid">
+    <!-- Logo and other header stuff -->
+    <div class="row spacer">
+      <div class="col-sm-12">
+        <!-- <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">
+                <img alt="Brand" style="float:left" src="images/brand-icon.png">&nbsp;&nbsp;<span class="logoText">Blue Star Shopping Cart</span>
+              </a>
 
-  <ul class="nav nav-pills nav-stacked span3">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Wish List</a></li>
-    <li><a href="#">My Cart</a></li>
-    <li><a href="#">My Shopping History</a></li>
-  </ul>
+            </div>
+          </div>
+        </nav> -->
+        <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!-- <a class="navbar-brand" href="#">Brand</a> -->
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" style="float:left" src="images/brand-icon.png">&nbsp;&nbsp;<span class="logoText">Blue Star Shopping Cart</span>
+      </a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      </div>
+    </div>  <!-- End of logo -->
+    <div class="row spacer">
+        <!-- Left Navigator -->
+        <div class="col-sm-2">
+          <ul class="nav nav-pills nav-stacked">
+            <li class="active"><a href="#" ng-click="showHome()"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;&nbsp;Home</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;&nbsp;Favourites</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>&nbsp;&nbsp;My Cart</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;My Orders</a></li>
+          </ul>
+        </div>  <!-- End of Left Navigator -->
+        <!-- Main Content Area -->
+        <div class="col-sm-10">
+
+            <ul class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#">Electronics</a></li>
+            <li role="presentation"><a href="#">Kitchen and Garden</a></li>
+            <li role="presentation"><a href="#">Sports and Games</a></li>
+          </ul>
+        </div>  <!-- End of main content area -->
+    </div>
+    <!-- Footer -->
+    <div class="row spacer">
+      <div class="col-lg-12">
+        <div class="footer">
+          &copy; 2016
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
   </body>
 </html>
